# HandRec

./: .gitignore  CMakeLists.txt  InvStockItem.cpp  InvStockItem.h  Inventory.cpp  Inventory.h  InventoryDocument.cpp  InventoryDocument.h  MainFrame.cpp  MainFrame.h  main.cpp  main.h
